--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
         <title>Document</title>
     </head>
     <body>
+        <header>
+            <h1>Welcome to GIT414/515</h1>
+        </header>
+        <nav>
+            <h2>Home | About | Contact</h2>
+        </nav>
+        <main>
+            <p>This is my test page for GIT414/515.</p>
+        </main>
+        <aside>
 
+        </aside>
+        <footer>
+            <p>© 2025 GIT414/515</p>
+        </footer>
     </body>
 </html>
