Added strong, ul, copyright symbol
Added strong to h1, ul to nav, copyright symbol & small to footer

--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     </head>
     <body>
         <header>
-            <h1>Welcome to GIT414/515</h1>
+            <h1><strong>Welcome to GIT414/515</strong></h1>
         </header>
         <nav>
-            <h2>Home | About | Contact</h2>
+            <h2>
+                <ul>
+                    <li>Home</li> | 
+                    <li>About</li> | 
+                    <li>Contact</li>
+                </ul>
+            </h2>
         </nav>
         <main>
             <p>This is my test page for GIT414/515.</p>
@@ -20,7 +26,9 @@
 
         </aside>
         <footer>
-            <p>© 2025 GIT414/515</p>
+            <small>
+                <p>&copy; 2025 GIT414/515</p>
+            </small>
         </footer>
     </body>
 </html>
