removed strong for h1

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <h1><strong>Welcome to GIT414/515</strong></h1>
+            <h1>Welcome to GIT414/515</h1>
         </header>
         <nav>
             <h2>
