--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
         <nav>
             <h2>
                 <ul>
-                    <li>Home</li> | 
-                    <li>About</li> | 
-                    <li>Contact</li>
+                    <li>
+                        <a href="#home">Home</a>
+                    </li>
+                    <li>
+                        <a href="#about">About</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
                 </ul>
             </h2>
         </nav>
